# transaction-fraud-scoring

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  run_demo.py  run_ieee_demo.py
.github/workflows/: ci.yml
dashboards/: streamlit_app.py
data/: README.md
dbt/: dbt_project.yml  profiles.example.yml
dbt/models/marts/: fct_card_velocity.sql  fct_transactions.sql  schema.yml
dbt/models/staging/: schema.yml  stg_transactions.sql
docs/: data_dictionary.md  ieee_cis.md  model_card.md
docs/decisions/: 0001-time-based-split.md
scripts/: generate_figures.py  generate_ieee_figures.py  run_investigation.py
sql/: investigation.sql
src/fraud/: __init__.py  data.py  features.py  ieee_data.py  ieee_features.py  metrics.py  model.py  monitoring.py  rules.py  scoring.py
tests/: test_features.py  test_ieee_features.py  test_metrics.py  test_monitoring.py  test_rules.py
